Fixed: Menu button on mobile views

--- a/src/UI/Content/icons.less
+++ b/src/UI/Content/icons.less
@@ -280,7 +280,6 @@
 //Navbar
 .icon-sonarr-navbar-collapsed {
   .fa-icon-content(@fa-var-bars);
-  background-color: #ffffff;
 }
 
 .icon-sonarr-navbar-series {
